fail_crate/tests/duplicate_different_default.rs
use inew::New;

#[derive(New)]
struct A {
    #[new(default, default = 5)]
    x: u32,
}

fn main() {}
